--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.phanna.writingexplanation.writing_explanation">
    <application
-        android:label="writing_explanation"
+        android:label="តែងសេចក្ដី"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
