--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.phanna.writingexplanation.writing_explanation">
    <application
+       tools:replace="android:name"
         android:label="តែងសេចក្ដី"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -30,5 +32,13 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <!-- StartApp -->
+       <meta-data android:name="com.startapp.sdk.APPLICATION_ID" android:value="200973945" />
+       <meta-data android:name="com.startapp.sdk.RETURN_ADS_ENABLED" android:value="false" />
+       <meta-data android:name="com.startapp.sdk.SPLASH_ENABLED" android:value="false" />
+       <meta-data
+           android:name="com.startapp.sdk.MIXED_AUDIENCE"
+           android:value="true"/>
+       <!-- End StartApp -->
     </application>
 </manifest>
