--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.6+24
+version: 2.1.0+25
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -36,10 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  onesignal_flutter: ^3.5.0
+  onesignal_flutter: ^5.2.0
+  dynamic_color: ^1.4.0
   flutter_framework:
     git:
       url: https://github.com/pangphannarupp/flutter_framework.git
+      ref: 2.0.0
 
 dev_dependencies:
   flutter_test:
